--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <img src="/img/menu.svg" alt="" class="menu_hamburger">
+        <img src="img/menu.svg" alt="" class="menu_hamburger">
         <a class="link1" href="index.html"><img class="logo_img" src="img/logo.svg" alt=""></a>
         <input class="search_block" type="text" placeholder="Введите поисковый запрос">
             <ul class="nav">
