--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- MAIN -->
     <main class="main">
     <!-- Asics Block -->
-    <div class="asics_block">
+    <div class="asics_block" style="background-image: url(img/asics_bg.png);">
         <div class="asics_text">
         <p class="asics_title">Asics</p>
         <p class="asics_sub_title">любые дороги, любые вершины</p>
