--- a/12_element.html
+++ b/12_element.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/img/menu.svg" alt="" class="menu_hamburger">
+        <img src="img/menu.svg" alt="" class="menu_hamburger">
         <a class="link1" href="index.html"><img class="logo_img" src="img/logo.svg" alt=""></a>
         <input class="search_block" type="text" placeholder="Введите поисковый запрос">
             <ul class="nav">
@@ -22,11 +22,11 @@
         <section class="elem">
 <div class="container">
     <div class="scroll_image">
-        <img src="/img/12_element/sec.png" alt="">
-        <img src="/img/12_element/third.png" alt="">
-        <img src="/img/12_element/four.png" alt="">
+        <img src="img/12_element/sec.png" alt="">
+        <img src="img/12_element/third.png" alt="">
+        <img src="img/12_element/four.png" alt="">
     </div>
-    <img class="element_main_image" src="/img/12_element/main.png" alt="">
+    <img class="element_main_image" src="img/12_element/main.png" alt="">
     <div class="element_description">
         <a class="element_brand">REEBOK</a>
 <p class="element_desc">Кроссовки женские Reebok Energen Run 3</p>
@@ -54,8 +54,8 @@
                 поддержку инициативы по
                 сохранению экологии нашей планеты.</p>
         </div>
-        <img src="/img/12_element/1_desc.png" alt="">
-        <img src="/img/12_element/2_desc.png" alt="">
+        <img src="img/12_element/1_desc.png" alt="">
+        <img src="img/12_element/2_desc.png" alt="">
         <div class="tdesc">
             <p class="title_desc">АМОРТИЗАЦИЯ</p>
             <p class="desc_desc">Промежуточная подошва FuelFoam
@@ -69,7 +69,7 @@
                 поверхностью, позволяя тебе
                 чувствовать уверенность во время бега.</p>
         </div>
-        <img src="/img/12_element/3_desc.png" alt="">
+        <img src="img/12_element/3_desc.png" alt="">
     </div>
 </section>
     </main>
